change 'next answer button' to 'next question', finish logic for quiz

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button id="answerBtn2" class="answerBtn">Option 2</button>
         <button id="answerBtn3" class="answerBtn">Option 3</button>
     <br>
-        <button id="nxtBtn">Next Answer</button>
+        <button id="nxtBtn">Next Question</button>
         
 
 </div>
