--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 4: Code Quiz</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/index.css"/>
 </head>
 <body>
@@ -22,17 +23,17 @@
     <h2>Instructions</h2>
     <p>This is a timed, multiple choice quiz. You have 2 minutes to complete this quiz! Good luck!</p>
     <div id="btnCont">
-        <button id="strtBtn" class="strtBtn">Let's Go!</button>
+        <button id="strtBtn" class="strtBtn btn btn-dark">Let's Go!</button>
     </div>
 </div>
 
 <div id="quiz" class="hide">
     <h3 id='questionTxt' >Question Here</h3>
-        <button id="answerBtn1" class="answerBtn">Option 1</button>
-        <button id="answerBtn2" class="answerBtn">Option 2</button>
-        <button id="answerBtn3" class="answerBtn">Option 3</button>
+        <button id="answerBtn1" class="answerBtn btn btn-dark">Option 1</button>
+        <button id="answerBtn2" class="answerBtn btn btn-dark">Option 2</button>
+        <button id="answerBtn3" class="answerBtn btn btn-dark">Option 3</button>
     <br>
-        <button id="nxtBtn">Next Question</button>
+        <button id="nxtBtn" class="btn btn-dark">Next Question</button>
         
 
 </div>
